# DataFaker

./: LICENSE  README.md  pyproject.toml
config/: default.yaml  tasks.example.yaml
src/datafaker/: __init__.py  __main__.py  cli.py  config.py  models.py
src/datafaker/api/: client.py
src/datafaker/generators/: backflow_landing_page.py  backflow_link.py  base.py  old_customer_landing_page.py  product.py  registry.py
src/datafaker/services/: job_runner.py  worker_pool.py
src/datafaker/utils/: logging.py  random_data.py
tests/: test_registry.py  test_worker_pool.py
